--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,13 @@
 plugins {
     id 'com.android.application'
 }
+
+apply plugin: "androidx.navigation.safeargs"
+
+
 apply plugin: 'kotlin-android'
+
+
 
 android {
     compileSdkVersion 30
@@ -15,6 +21,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    packagingOptions {
+
+        exclude "META-INF/DEPENDENCIES"
     }
 
     buildTypes {
@@ -36,9 +47,13 @@ android {
 
 dependencies {
 
+    def nav_version = ".3.3"
+    implementation "androidx.navigation:navigation-fragment:2.3.3"
+    implementation "androidx.navigation:navigation-ui:2.3.3"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
