--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,13 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.theartofdev.edmodo:android-image.cropper:2.4.+'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation'com.google.firebase:firebase-storage:11.0.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+
 }
 repositories {
     mavenCentral()
