--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
-
+        classpath 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
