--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,10 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        multiDexEnabled true
+
         applicationId "com.example.androidproject"
-        minSdkVersion 26
+        minSdkVersion 20
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -51,6 +53,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.multidex:multidex:2.0.1'  //with androidx libraries
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
@@ -77,6 +80,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
 }
 repositories {
     mavenCentral()
