--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,18 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidProject">
+        android:theme="@style/AppTheme.NoActionBar">
 
-        <activity android:name=".MessageActivity"/>
-
+        <activity android:name=".MessageActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".LoginActivity"
             android:theme="@style/Theme.AndroidProject.NoActionBar">
             <intent-filter>
@@ -25,10 +27,13 @@
         </activity>
 
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".SignUpActivity"
             android:theme="@style/Theme.AndroidProject.NoActionBar" />
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan"
+            />
     </application>
 
 </manifest>
