--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,30 @@
         </activity>
 
     <activity android:name=".MainActivity" />
+
+    <activity android:name=".MessageActivity"
+        android:theme="@style/AppTheme.NoActionBar"/>
+
     <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
         android:theme="@style/Base.Theme.AppCompat"/>
+
+    <service android:name=".FirebaseIDHelper"
+        android:enabled="true"
+        android:exported="true">
+
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+        </intent-filter>
+    </service>
+
+        <service android:name=".NotifFirebasMessaging"
+            android:enabled="true"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
 
 </application>
 </manifest>
