--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation'com.google.firebase:firebase-storage:11.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
-
+    implementation 'com.firebaseui:firebase-ui-database:2.1.1'
 }
 repositories {
     mavenCentral()
