--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject">
-        <activity android:name=".PersonProfileActivity"></activity>
-        <activity android:name=".FindfriendActivity"></activity>
+        <activity android:name=".FrindsListActivity"></activity>
+        <activity android:name=".PersonProfileActivity" />
+        <activity android:name=".FindfriendActivity" />
         <activity android:name=".UserProfile" />
         <activity
             android:name=".LoginActivity"
