--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
 
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1440070412991487"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true"/>
+
 
     </application>
 
