--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject">
-        <activity android:name=".Facebook"></activity>
+        <activity android:name=".Map.Facebook"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,9 +36,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".UserProfile" />
+        <activity android:name=".Users.UserProfile" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login.LoginActivity"
             android:theme="@style/Theme.AndroidProject.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,18 +47,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".Login.SignUpActivity"
             android:theme="@style/Theme.AndroidProject.NoActionBar" />
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".MessageActivity"
+            android:name=".Chat.MessageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
 
         <service
-            android:name=".FirebaseIDHelper"
+            android:name=".DB.FirebaseIDHelper"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -66,7 +66,7 @@
             </intent-filter>
         </service>
         <service
-            android:name=".NotifFirebasMessaging"
+            android:name=".Notifications.NotifFirebasMessaging"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
