--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
 
 dependencies {
 
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation 'androidx.multidex:multidex:2.0.1'  //with androidx libraries
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
