--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     implementation'com.google.firebase:firebase-storage:11.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    implementation 'com.firebaseui:firebase-ui-database:2.1.1'
+
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     apply plugin: 'com.google.gms.google-services'
