--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject">
         <activity android:name=".Map.Facebook"></activity>
+        <activity android:name=".FrindsListActivity"></activity>
+        <activity android:name=".FindfriendActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
