--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Map.Facebook" />
         <activity android:name=".FrindsListActivity" />
         <activity android:name=".FindfriendActivity" />
+        <activity android:name=".PersonProfileActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
