--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,20 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject">
-        <activity android:name=".Map.Facebook"></activity>
-        <activity android:name=".FrindsListActivity"></activity>
-        <activity android:name=".FindfriendActivity"></activity>
+
+        <activity android:name=".Users.ResetPasswordActivity"></activity>
+        <activity android:name=".Map.Facebook" />
+        <activity android:name=".FrindsListActivity" />
+        <activity android:name=".FindfriendActivity" />
+        <activity android:name=".PersonProfileActivity" />
+
+        
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -58,9 +61,9 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
-        <activity android:name=".Chat.PopInChatUserActivity"
-            android:theme="@style/AppTheme.InChatPop"/>
+        <activity
+            android:name=".Chat.PopInChatUserActivity"
+            android:theme="@style/AppTheme.InChatPop" />
 
         <service
             android:name=".DB.FirebaseIDHelper"
@@ -71,17 +74,19 @@
             </intent-filter>
         </service>
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
 
-        <provider android:authorities="com.facebook.app.FacebookContentProvider1440070412991487"
+        <provider
             android:name="com.facebook.FacebookContentProvider"
-            android:exported="true"/>
+            android:authorities="com.facebook.app.FacebookContentProvider1440070412991487"
+            android:exported="true" />
 
         <service
             android:name=".Chat.NotifFirebasMessaging"
