--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".Users.PassNotif"
         android:theme="@style/Theme.AndroidProject">
 
         <activity android:name=".Users.ResetPasswordActivity"></activity>
