--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,14 @@
 
         <activity android:name=".Users.ResetPasswordActivity"></activity>
         <activity android:name=".Map.Facebook" />
+
+        <activity android:name=".FriendRequestActivity"></activity>
+
+            android:theme="@style/Theme.AndroidProject.NoActionBar" />
+
         <activity android:name=".FrindsListActivity" />
         <activity android:name=".FindfriendActivity" />
         <activity android:name=".PersonProfileActivity" />
-
-        
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
